hard-gists/48d35095a414580c055b/run.log
=== Docker Run Log for 48d35095a414580c055b ===
Started at: Mi 29. Okt 15:03:23 CET 2025

[2025-10-29 15:03:23] START: Running container for 48d35095a414580c055b
[2025-10-29 15:03:23] SUCCESS: Container 3f73e8f9e379ef4bf36d311b00f3abbbc12f93c780fa2605786b135ca4b17022 started for 48d35095a414580c055b
=== Container logs for 48d35095a414580c055b ===
  File "/snippet.py", line 33
    print url + ' -> ' + filename
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 48d35095a414580c055b ===
[2025-10-29 15:03:25] INFO: Container 3f73e8f9e379ef4bf36d311b00f3abbbc12f93c780fa2605786b135ca4b17022 has stopped
